[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=1]
[ext_resource path="res://BattleShip.gd" type="Script" id=2]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=4]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="BattleShip" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="CaptainCamera" type="Camera" parent="BattleShip"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
current = true

[node name="CannonRF" parent="BattleShip" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 4, 0, -2 )

[node name="CannonLF" parent="BattleShip" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -4, 0, -2 )

[node name="CannonRB" parent="BattleShip" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 4, 0, 2 )

[node name="CannonLB" parent="BattleShip" instance=ExtResource( 3 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -4, 0, 2 )

[node name="Asteroids" type="Spatial" parent="."]

[node name="Asteroid" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3877, 0, -25.0279 )

[node name="Asteroid2" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.830275, 0, 0.557354, -0.374321, 0.74091, 0.557616, -0.412949, -0.671604, 0.615159, 27.5332, 0, -4.19472 )

[node name="Asteroid4" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.615758, 0, 0.787936, 0, 1, 0, -0.787936, 0, 0.615758, -37.7856, 0, -17.5603 )

[node name="Asteroid3" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.185871, -0.529181, 0.827901, -0.374321, 0.74091, 0.557616, -0.90848, -0.413545, -0.06037, -10.8129, 0, -18.2416 )

[node name="Asteroid8" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.971105, 0, 0.238652, 0, 1, 0, -0.238652, 0, 0.971105, -7.28239, 0, -43.6135 )

[node name="Asteroid7" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.707733, -0.16028, 0.688058, -0.374321, 0.74091, 0.557616, -0.599164, -0.652198, 0.46437, 14.3396, 0, -27.4742 )

[node name="Asteroid6" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.409923, 0, 0.91212, 0, 1, 0, -0.91212, 0, 0.409923, -52.2815, 0, -24.8651 )

[node name="Asteroid5" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.0363105, -0.612584, 0.789571, -0.374321, 0.74091, 0.557616, -0.926588, -0.275306, -0.256206, -26.2509, 0, -31.9638 )

[node name="Asteroid16" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.772745, 0, -0.634717, 0, 1, 0, 0.634717, 0, 0.772745, -11.4517, 0, 29.9961 )

[node name="Asteroid15" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.903696, 0.426279, 0.0402402, -0.374321, 0.74091, 0.557616, 0.207886, -0.518979, 0.829123, -11.4258, 0, 56.9773 )

[node name="Asteroid14" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.97594, 0, 0.218041, 0, 1, 0, -0.218041, 0, 0.97594, -53.4171, 0, 5.19028 )

[node name="Asteroid13" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.720258, -0.146437, 0.678074, -0.374321, 0.74091, 0.557616, -0.584047, -0.655445, 0.478832, -32.1417, 0, 21.7838 )

[node name="Asteroid12" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.901893, 0, -0.43196, 0, 1, 0, 0.43196, 0, 0.901893, -13.3095, 0, 4.41864 )

[node name="Asteroid11" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.927197, 0.290106, 0.236949, -0.374321, 0.74091, 0.557616, -0.0137904, -0.605715, 0.795562, -6.84518, 0, 30.6141 )

[node name="Asteroid10" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.895704, 0, 0.444651, 0, 1, 0, -0.444651, 0, 0.895704, -59.9823, 0, -9.65529 )

[node name="Asteroid9" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.560062, -0.298629, 0.772755, -0.374321, 0.74091, 0.557616, -0.739063, -0.601559, 0.303173, -35.3615, 0, 1.38129 )

[node name="Asteroid32" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.546146, 0, -0.83769, 0, 1, 0, 0.83769, 0, -0.546146, 63.9333, 0, 0.410042 )

[node name="Asteroid31" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.107528, 0.562596, -0.819709, -0.374321, 0.74091, 0.557616, 0.921044, 0.366794, 0.130923, 37.1176, 0, 3.3947 )

[node name="Asteroid30" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.323752, 0, -0.946142, 0, 1, 0, 0.946142, 0, 0.323752, 83.9874, 0, -44.0226 )

[node name="Asteroid29" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.659512, 0.635433, -0.401583, -0.374321, 0.74091, 0.557616, 0.651865, -0.217433, 0.726495, 69.8271, 0, -21.0558 )

[node name="Asteroid28" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.330448, 0, -0.943824, 0, 1, 0, 0.943824, 0, -0.330448, 89.1527, 0, -4.24151 )

[node name="Asteroid27" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.115388, 0.633876, -0.764779, -0.374321, 0.74091, 0.557616, 0.920092, 0.221931, 0.322766, 63.8242, 0, 5.05653 )

[node name="Asteroid26" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.540196, 0, -0.841539, 0, 1, 0, 0.841539, 0, 0.540196, 98.0234, 0, -52.1762 )

[node name="Asteroid25" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.796024, 0.565181, -0.2166, -0.374321, 0.74091, 0.557616, 0.475635, -0.362798, 0.801342, 89.7534, 0, -26.4937 )

[node name="Asteroid24" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.953727, 0, -0.300672, 0, 1, 0, 0.300672, 0, -0.953727, 29.7677, 0, -47.9357 )

[node name="Asteroid23" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.667694, 0.201933, -0.716525, -0.374321, 0.74091, 0.557616, 0.643482, 0.640527, -0.419113, 7.15165, 0, -62.6497 )

[node name="Asteroid22" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.350354, 0, -0.936617, 0, 1, 0, 0.936617, 0, -0.350354, 73.4666, 0, -69.5421 )

[node name="Asteroid21" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.0958847, 0.629036, -0.77144, -0.374321, 0.74091, 0.557616, 0.922328, 0.2353, 0.306504, 47.9469, 0, -60.7823 )

[node name="Asteroid20" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.854414, 0, -0.519594, 0, 1, 0, 0.519594, 0, -0.854414, 52.2083, 0, -35.5229 )

[node name="Asteroid19" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.494832, 0.348961, -0.795843, -0.374321, 0.74091, 0.557616, 0.784235, 0.573828, -0.236003, 26.7342, 0, -44.4144 )

[node name="Asteroid18" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.116705, 0, -0.993167, 0, 1, 0, 0.993167, 0, -0.116705, 89.4881, 0, -66.9338 )

[node name="Asteroid17" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.31323, 0.667015, -0.676002, -0.374321, 0.74091, 0.557616, 0.872795, 0.0783798, 0.481753, 66.7963, 0, -52.3369 )

[node name="Asteroid64" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64.2298, 0, -76.4722 )

[node name="Asteroid63" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.830275, 0, 0.557354, -0.374321, 0.74091, 0.557616, -0.412949, -0.671604, 0.615159, -47.0844, 0, -55.6391 )

[node name="Asteroid62" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.615758, 0, 0.787936, 0, 1, 0, -0.787936, 0, 0.615758, -112.403, 0, -69.0046 )

[node name="Asteroid61" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.185871, -0.529181, 0.827901, -0.374321, 0.74091, 0.557616, -0.90848, -0.413545, -0.06037, -85.4304, 0, -69.686 )

[node name="Asteroid60" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.971105, 0, 0.238652, 0, 1, 0, -0.238652, 0, 0.971105, -81.8999, 0, -95.0579 )

[node name="Asteroid59" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.707733, -0.16028, 0.688058, -0.374321, 0.74091, 0.557616, -0.599164, -0.652198, 0.46437, -60.278, 0, -78.9185 )

[node name="Asteroid58" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.409923, 0, 0.91212, 0, 1, 0, -0.91212, 0, 0.409923, -126.899, 0, -76.3094 )

[node name="Asteroid57" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.0363105, -0.612584, 0.789571, -0.374321, 0.74091, 0.557616, -0.926588, -0.275306, -0.256206, -100.868, 0, -83.4082 )

[node name="Asteroid56" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.772745, 0, -0.634717, 0, 1, 0, 0.634717, 0, 0.772745, -86.0692, 0, -21.4483 )

[node name="Asteroid55" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.903696, 0.426279, 0.0402402, -0.374321, 0.74091, 0.557616, 0.207886, -0.518979, 0.829123, -86.0433, 0, 5.53296 )

[node name="Asteroid54" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.97594, 0, 0.218041, 0, 1, 0, -0.218041, 0, 0.97594, -128.035, 0, -46.2541 )

[node name="Asteroid53" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.720258, -0.146437, 0.678074, -0.374321, 0.74091, 0.557616, -0.584047, -0.655445, 0.478832, -106.759, 0, -29.6606 )

[node name="Asteroid52" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.901893, 0, -0.43196, 0, 1, 0, 0.43196, 0, 0.901893, -87.927, 0, -47.0257 )

[node name="Asteroid51" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.927197, 0.290106, 0.236949, -0.374321, 0.74091, 0.557616, -0.0137904, -0.605715, 0.795562, -81.4627, 0, -20.8303 )

[node name="Asteroid50" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.895704, 0, 0.444651, 0, 1, 0, -0.444651, 0, 0.895704, -134.6, 0, -61.0997 )

[node name="Asteroid49" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.560062, -0.298629, 0.772755, -0.374321, 0.74091, 0.557616, -0.739063, -0.601559, 0.303173, -109.979, 0, -50.0631 )

[node name="Asteroid48" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.546146, 0, -0.83769, 0, 1, 0, 0.83769, 0, -0.546146, -10.6842, 0, -51.0343 )

[node name="Asteroid47" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.107528, 0.562596, -0.819709, -0.374321, 0.74091, 0.557616, 0.921044, 0.366794, 0.130923, -37.4999, 0, -48.0497 )

[node name="Asteroid46" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.323752, 0, -0.946142, 0, 1, 0, 0.946142, 0, 0.323752, 9.36983, 0, -95.467 )

[node name="Asteroid45" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.659512, 0.635433, -0.401583, -0.374321, 0.74091, 0.557616, 0.651865, -0.217433, 0.726495, -4.79038, 0, -72.5002 )

[node name="Asteroid44" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.330448, 0, -0.943824, 0, 1, 0, 0.943824, 0, -0.330448, 14.5352, 0, -55.6859 )

[node name="Asteroid43" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.115388, 0.633876, -0.764779, -0.374321, 0.74091, 0.557616, 0.920092, 0.221931, 0.322766, -10.7933, 0, -46.3878 )

[node name="Asteroid42" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.540196, 0, -0.841539, 0, 1, 0, 0.841539, 0, 0.540196, 23.4059, 0, -103.621 )

[node name="Asteroid41" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.796024, 0.565181, -0.2166, -0.374321, 0.74091, 0.557616, 0.475635, -0.362798, 0.801342, 15.1359, 0, -77.938 )

[node name="Asteroid40" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.953727, 0, -0.300672, 0, 1, 0, 0.300672, 0, -0.953727, -44.8498, 0, -99.3801 )

[node name="Asteroid39" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.667694, 0.201933, -0.716525, -0.374321, 0.74091, 0.557616, 0.643482, 0.640527, -0.419113, -67.4659, 0, -114.094 )

[node name="Asteroid38" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.350354, 0, -0.936617, 0, 1, 0, 0.936617, 0, -0.350354, -1.15096, 0, -120.986 )

[node name="Asteroid37" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.0958847, 0.629036, -0.77144, -0.374321, 0.74091, 0.557616, 0.922328, 0.2353, 0.306504, -26.6706, 0, -112.227 )

[node name="Asteroid36" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.854414, 0, -0.519594, 0, 1, 0, 0.519594, 0, -0.854414, -22.4092, 0, -86.9673 )

[node name="Asteroid35" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.494832, 0.348961, -0.795843, -0.374321, 0.74091, 0.557616, 0.784235, 0.573828, -0.236003, -47.8833, 0, -95.8587 )

[node name="Asteroid34" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( -0.116705, 0, -0.993167, 0, 1, 0, 0.993167, 0, -0.116705, 14.8706, 0, -118.378 )

[node name="Asteroid33" parent="Asteroids" instance=ExtResource( 4 )]
transform = Transform( 0.31323, 0.667015, -0.676002, -0.374321, 0.74091, 0.557616, 0.872795, 0.0783798, 0.481753, -7.82118, 0, -103.781 )
